Added sidebar and container

--- a/index.html
+++ b/index.html
@@ -24,105 +24,117 @@
                         <p>November 27, 2022</p>
                     </div>
                     <div class="blog-body">
-                        <div class="blog-title">
-                            My First Post!
-                        </div>
+                        <a href="#" class="blog-title">
+                            Python Current Time ?
+                        </a>
                         <div class="blog-subtitle">
-                            This is my first post subtitle
+                            How to Get and Use the Current Time in Python
                         </div>
                         <div class="blog-description">
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
+                            Python, being ever extensible and customizable, enables you to customize the format in which it prints the timestamp. The datetime class internally uses its .isoformat() method when printing. Since .isoformat() is just an instance method, you can call it directly from any datetime object to customize the ISO timestamp
+                            
                         </div>
                     </div>
                 </div>
             </div>
             <div class="blog">
                 <div class="blog-left">
-                    <img src="assets/images/logo/user1.jpg" alt="User Logo">
+                    <img src="assets/images/logo/user2.jpg" alt="User Logo">
                 </div>
                 <div class="blog-right">
                     <div class="blog-header">
-                        <a href="#">SmithX</a>
-                        <p>November 27, 2022</p>
+                        <a href="#">Madara</a>
+                        <p>November 24, 2022</p>
                     </div>
                     <div class="blog-body">
-                        <div class="blog-title">
-                            My First Post!
-                        </div>
+                        <a href="#" class="blog-title">
+                            Command-Line Interfaces With Python's!
+                        </a>
                         <div class="blog-subtitle">
-                            This is my first post subtitle
+                            Build Command-Line Interfaces With Python's argparse
                         </div>
                         <div class="blog-description">
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
+                            Since the invention of computers, humans have always needed and found ways to interact and share information with these machines. The information exchange has flowed among humans, computer software, and hardware components. The shared boundary between any two of these elements is generically known as an interface.
                         </div>
                     </div>
                 </div>
             </div>
             <div class="blog">
                 <div class="blog-left">
-                    <img src="assets/images/logo/user1.jpg" alt="User Logo">
+                    <img src="assets/images/logo/user3.jpg" alt="User Logo">
                 </div>
                 <div class="blog-right">
                     <div class="blog-header">
-                        <a href="#">SmithX</a>
-                        <p>November 27, 2022</p>
+                        <a href="#">Harry</a>
+                        <p>November 30, 2022</p>
                     </div>
                     <div class="blog-body">
-                        <div class="blog-title">
-                            My First Post!
-                        </div>
+                        <a href="#" class="blog-title">
+                            Python Basics: Dictionaries
+                        </a>
                         <div class="blog-subtitle">
-                            This is my first post subtitle
+                            Learn about Python Dictionaries
                         </div>
                         <div class="blog-description">
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
+                            Python dictionaries, like lists and tuples, store a collection of objects. However, instead of storing objects in a sequence, dictionaries hold information in pairs of data called key-value pairs. That is, each object in a dictionary has two parts: a key and a value. Each key is assigned a single value, which defines the relationship between the two sets.
                         </div>
                     </div>
                 </div>
             </div>
             <div class="blog">
                 <div class="blog-left">
-                    <img src="assets/images/logo/user1.jpg" alt="User Logo">
+                    <img src="assets/images/logo/user4.jpg" alt="User Logo">
                 </div>
                 <div class="blog-right">
                     <div class="blog-header">
-                        <a href="#">SmithX</a>
-                        <p>November 27, 2022</p>
+                        <a href="#">Nick</a>
+                        <p>November 20, 2022</p>
                     </div>
                     <div class="blog-body">
-                        <div class="blog-title">
-                            My First Post!
-                        </div>
+                        <a href="#" class="blog-title">
+                            Puzzles With Python!
+                        </a>
                         <div class="blog-subtitle">
-                            This is my first post subtitle
+                            Advent of Code: Solving Your Puzzles With Python
                         </div>
                         <div class="blog-description">
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
+                            Advent of Code is an online Advent calendar where you’ll find new programming puzzles offered each day from December 1 to 25. While you can solve the puzzles at any time, the excitement when new puzzles unlock is really something special. You can participate in Advent of Code in any programming language—including Python!
                         </div>
                     </div>
                 </div>
             </div>
             <div class="blog">
                 <div class="blog-left">
-                    <img src="assets/images/logo/user1.jpg" alt="User Logo">
+                    <img src="assets/images/logo/user5.jpg" alt="User Logo">
                 </div>
                 <div class="blog-right">
                     <div class="blog-header">
-                        <a href="#">SmithX</a>
+                        <a href="#">RockLee</a>
                         <p>November 27, 2022</p>
                     </div>
                     <div class="blog-body">
-                        <div class="blog-title">
-                            My First Post!
-                        </div>
+                        <a href="#" class="blog-title">
+                            What's New From November 2022!
+                        </a>
                         <div class="blog-subtitle">
-                            This is my first post subtitle
+                            Python News: What's New From November 2022
                         </div>
                         <div class="blog-description">
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
+                            The Python world never stops spinning! After the release of Python 3.11 in October, the Python release team is already launching the first alpha versions of Python 3.12. The excitement of trying shiny new things shouldn’t distract you from being cautious while coding, though. Recently, researchers found more malicious packages on PyPI, and lawyers raised concerns about license violations when using GitHub Copilot to generate code.
                         </div>
                     </div>
                 </div>
+            </div>
+        </section>  
+
+        <section class="sidebar">
+            <div class="sidebar-title">Our Sidebar</div>
+            <div class="sidebar-subtitle">You can put any information here you'd like.</div>
+            <div class="sidebar-block">
+                <p>Latest Posts</p>
+                <p>Announcements</p>
+                <p>Calendars</p>
+                <p>etc</p>
             </div>
         </section>
     </main>
