--- a/index.html
+++ b/index.html
@@ -8,10 +8,38 @@
     <link rel="stylesheet" href="assets/styles/general.css">
     <link rel="stylesheet" href="assets/styles/blog.css">
     <link rel="stylesheet" href="assets/styles/sidebar.css">
+    <link rel="stylesheet" href="assets/styles/navbar.css">
 </head>
 <body>
+    <header class="header">
+         <div class="container">
+            <div class="nav-left">
+                <a href="#">
+                       <img src="assets/images/logo/CodeBeLog.png" alt="Logo" class="nav-left-logo">
+                    </a> 
+             </div>
+             <div class="nav-right">
+                <ul>
+                    <li>
+                        <a href="#">Home</a>
+                    </li>
+                    <li>
+                        <a href="#">About</a>
+                    </li>
+                    <li>
+                        <a href="#">Post!</a>
+                    </li>
+                    <li>
+                        <a href="#">Logout</a>
+                    </li>
+                </ul>
+             </div>
+         </div>
+    </header>
 
-    <!-- navbar: #546e7f; #6A899D background: #f9f9f9; link: #79adf1; -->
+
+
+
     <main>
         <section class="blog-section">
             <div class="blog">
